<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreatChallenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_the_teams">CHOOSE THE TEAMS!</string>
    <string name="player">Player 1</string>
    <string name="computer">Computer</string>
    <string name="uniform">Uniform</string>
    <string name="bt_preference">Preferences  >> </string>

</resources>
